add CRUD function for Event domain
